--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,10 +3,10 @@ name:   Lint Python Code
 on:
     pull_request:
         branches:
-            - master
+            - main
     push:
         branches:
-            - master
+            - main
 
 jobs:
     lint: 
