--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,7 @@ on:
     push:
         branches:
             - main
+    workflow_dispatch:        
 
 jobs:
     lint: 
@@ -15,7 +16,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-python@v5
               with :
-                python-version: "3.10"
+                python-version: "3.11"
                 cache: "pip"  
             - name: Install dependencies
               run:  
