--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,8 +20,10 @@ jobs:
                 cache: "pip"  
             - name: Install dependencies
               run:  
-               python -m pip install --upgrade pip
-               python -m pip install ruff
+               python -m pip install --upgrade pip  
+            - name: Install Ruff
+              run:
+                 python -m pip install ruff
             - name: Run Ruff
               run: ruff check --output-format=github
 
