--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name:   Lint Python Code
+name:   Test Python Code
 
 on:
     pull_request:
@@ -18,9 +18,12 @@ jobs:
               with :
                 python-version: "3.11"
                 cache: "pip"  
+            - name: Install poetry
+              run:
+                 python -m pip install poetry
             - name: Install dependencies
               run:  
-               python -m pip install --upgrade pip  
+               poetry install  
             - name: Run pytest
               run: pytest
 
