--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,20 @@ jobs:
                 python-version: "3.11"
                 cache: "pip"  
             - name: Install poetry
-              run:
-                 python -m pip install poetry
-            - name: Install dependencies
-              run:  
-               poetry install  
-            - name: Run pytest
-              run: pytest
-
-
+              uses: abatilo/actions-poetry@v2
+            - name: Setup a local virtual environment (if no poetry.toml file)
+              run: |
+                poetry config virtualenvs.create true --local
+                poetry config virtualenvs.in-project true --local
+            - uses: actions/cache@v3
+              name: Define a cache for the virtual environment based on the dependencies lock file
+              with:
+                path: ./.venv
+                key: venv-${{ hashFiles('poetry.lock') }}
+            - name: Install the project dependencies
+              run: poetry install
+            - name: Run the automated tests (for example)
+              run: poetry run pytest -v
         
 
 
